@@ -1,5 +1,6 @@
 0.37 2019-11-04
  - fix literal input-object coercion problem - thanks @ccakes
+ - add "extensions" field to GraphQL::Error - thanks @cockscomb
 
 0.36 2019-05-01
  - doc improvements
